--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "es6modules",
+  "name": "es6",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "webpack --progress --watch"
+    "build": "webpack --progress --watch",
+    "babel": "babel app.js --watch --out-file app-compiled.js",
+    "server": "browser-sync start --directory --server  --files '*.js, *.html, *.css'"
+
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.12.0",
+    "babel-cli": "^7.0.0-beta.1",
+    "babel-preset-env": "^2.0.0-beta.1",
     "flickity": "^1.2.1",
     "insane": "^2.5.0",
     "jquery": "^3.0.0",
@@ -18,10 +23,30 @@
     "md5": "^2.1.0",
     "slug": "^0.9.1"
   },
+  "babel": {
+    "presets": [
+      [
+        "env",
+        {
+          "targets": {
+            "browsers": [
+              "last 2 versions",
+              "safari >= 8"
+            ]
+          }
+        }
+      ]
+    ],
+    "plugins": [
+      "transform-object-rest-spread"
+    ]
+  },
   "devDependencies": {
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015-native-modules": "^6.6.0",
+    "browser-sync": "^2.13.0",
     "webpack": "^2.1.0-beta.15"
   }
 }
